# easypaperless_mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release-rc.yml  release.yml
dev/: PRD.md  easypaperless_v0.2.0_sync_methods_overview.md  scratchbook.md
dev/issues/: 0000-general-index.md  0001-feature-documents_subserver_and_tools.md  0002-feature-list_documents_full_parameter_coverage.md  0003-bug-filter_fields_none_breaks_validation.md  0004-bug-documents_tools_incomplete_api_coverage.md  0005-feature-tags_subserver_and_tools.md  0006-refactoring-remove_clear_params_from_update_document.md  0007-refactoring-rename_document_id_params_to_id.md  0008-feature-correspondents_subserver_and_tools.md  0009-feature-custom_fields_subserver_and_tools.md  0010-feature-document_types_subserver_and_tools.md  0011-feature-document_notes_subserver_and_tools.md  0012-feature-storage_paths_subserver_and_tools.md  0013-maintenance-migrate_to_easypaperless_0_3_0.md  0014-feature-list_tools_return_total_count.md  0015-bug-https_url_sends_plain_http.md  0016-maintenance-migrate_to_easypaperless_0_3_1.md  0017-bug-filter_fields_fails_for_required_fields.md  0018-bug-duplicate_document_notes_tools.md  0019-feature-client_side_auth_credentials.md  0020-feature-users_subserver_and_tools.md  0021-feature-trash_subserver_and_tools.md  0022-bug-authorization_bearer_header_not_supported.md  0024-feature-omitted_fields_transparency.md  (+6 more)
docs/: PRD.md  tool-reference.md
scripts/: inspect_tools.py
(+37 files in other folders)
