[project]
name = "easypaperless-mcp"
version = "0.1.0"
description = "MCP server for paperless-ngx via easypaperless"
requires-python = ">=3.11"
dependencies = [
    "easypaperless==0.4.0",
    "fastmcp>=2.0",
]

[project.scripts]
easypaperless-mcp = "easypaperless_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easypaperless_mcp"]
